# halo

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CREDITS.txt  Dockerfile  LICENSE.txt  README.md  benchmark.sh  fresh-build.sh  minibench.sh  test.sh
cmake/: FindGRCP.cmake  Python.cmake  gRCPConfig.cmake
docs/logo/: info.txt
include/halo/: ClientGroup.h  ClientRegistrar.h  ClientSession.h  CodeRegionInfo.h  CompilationPipeline.h  Compiler.h  Error.h  ExternalizeGlobalsPass.h  Knob.h  KnobSet.h  LinkageFixupPass.h  LoopKnob.h  LoopNamerPass.h  MDUtils.h  MonitorState.h  NamedKnobs.h  PerformanceData.h  Profiler.h  ScalarKnob.h  SequentialAccess.h  SimplePassBuilder.h  TaskQueueOverlay.h  ThreadPool.h  Utility.h
include/halo/compiler/: CallGraph.h  CallingContextTree.h  CodeRegionInfo.h  CompilationPipeline.h  ExecutionTimeProfiler.h  ExposeSymbolTablePass.h  LinkageFixupPass.h  LoopAnnotatorPass.h  LoopNamerPass.h  MDUtils.h  PerformanceData.h  PrintIRPass.h  Profiler.h  ProgramInfoPass.h  ReachableVisitor.h  ReadELF.h  SimplePassBuilder.h  Util.h
include/halo/nlohmann/: util.hpp
include/halo/server/: ClientGroup.h  ClientRegistrar.h  ClientSession.h  CompilationManager.h  SequentialAccess.h  TaskQueueOverlay.h  ThreadPool.h
include/halo/tuner/: Actions.h  AdaptiveTuningSection.h  AggressiveTuningSection.h  Bakeoff.h  Bandit.h  BuildSettings.h  CodeVersion.h  CompileOnceTuningSection.h  ConfigManager.h  Knob.h  KnobSet.h  LoopKnob.h  NamedKnobs.h  PseudoBayesTuner.h  RandomQuantity.h  RandomTuner.h  StatisticalStopper.h  TuningSection.h  Utility.h
lib/halomon/: CMakeLists.txt  Error.cpp  LinuxPerfEvents.cpp  Monitor.cpp  Profiler.cpp
llvm/: fresh-build-rpi.sh  fresh-build.sh
monitor/: CMakeLists.txt  Error.cpp  LinuxPerfEvents.cpp  Monitor.cpp  Profiler.cpp  monitor.cpp
net/: Channel.h  Logging.cpp  Logging.h  MessageKind.h  Messages.proto  RawSample.proto
proto/: Comms.proto  MessageHeader.h  MessageKind.h  RPCSystem.h
test/: .gitignore  CMakeLists.txt  linear_hot.cpp  lit.cfg.in  log.ll  simple.cpp
test/basic/: dl_check.c  fixed_workload.c  function_static.c  linear_hot.c  linear_hot.cpp  linear_hot.h  linear_hot_threads.c  multiple_groups.c  noop.cpp  random_workload.c  simple_global.c  workload.h
test/bench/: almabench.c  fftbench.cpp  fftbench.cpp.expected  linpack-pc.c  linpack-pc.expected  oourafft.c
test/bench/c/: ReedSolomon.c  ReedSolomon.c.expected  almabench.c  bzip2.c  gzip.c  linpack-pc.c  lpbench.c  n-body.c  n-body.c.expected  oggenc.c  oourafft.c  oourafft.c.expected  perlin.c  perlin.c.expected  spectralnorm.c  spectralnorm.c.expected
test/bench/cpp/: convolve.cpp  convolve.cpp.broken  convolve.cpp.expected  fftbench.cpp  fftbench.cpp.expected  matmul.hpp  matrix.cpp  oopack_v1p8.cpp  oopack_v1p8.cpp.expected  smallpt.cpp  sphereflake.cpp
test/unit/: rdynamic.c
test/util/: docker-post-install.sh  mini_bench.sh  run_test.sh  run_uniq_test.sh  timeit.sh
test/util/plotting/: plot.py  plot_all.sh  read_minibench.py
tools/: CMakeLists.txt  CodeRegionInfo.cpp  Error.cpp  HaloServer.cpp  OldProfiler.cpp  OldProfiler.h  TestClient.cpp
tools/haloserver/: AdaptiveTuningSection.cpp  AggressiveTuningSection.cpp  Bakeoff.cpp  Bandit.cpp  CMakeLists.txt  CallGraph.cpp  CallingContextTree.cpp  ClientGroup.cpp  ClientRegistrar.cpp  ClientSession.cpp  CodeRegionInfo.cpp  CodeVersion.cpp  CompilationPipeline.cpp  ConfigManager.cpp  ExecutionTimeProfiler.cpp  HaloServer.cpp  Knob.cpp  KnobSet.cpp  MDUtils.cpp  NamedKnobs.cpp  PerformanceData.cpp  Profiler.cpp  ProgramInfoPass.cpp  PseudoBayesTuner.cpp  RandomTuner.cpp  ScalarKnob.cpp  StatisticalStopper.cpp  TuningSection.cpp  server-config.json
xgboost/: get.sh
